# shami-rs

./: Cargo.toml  README.md  net_config.json  net_config_p0.json  net_config_p1.json  net_config_p2.json
src/: main.rs
src/math/: lagrange.rs  mersenne61.rs  mod.rs
src/mpc/: mod.rs  share.rs
src/net/: channel.rs  mod.rs
