[package]
name = "shami-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
